[tool.poetry]
name = "pycount_hj"
version = "0.1.0"
description = "A package to count no of words in a text file"
authors = ["Himanshu Jain"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
